# NPG-Gra-Mastermind

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: run_tests.yml
img/: Menu.xcf
src/: board.py  heuristics.py  state.py  ui.py
test/: test_board.py  test_heuristics.py  test_state.py  test_ui.py
