[project]
name = "Gra-Mastermind"
description = "Projekt grupowy na zajęcia z NPG - temat: Gra Mastermind"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.11,<3.12"
dependencies = [
    "pygame-ce>=2.4.1,<2.5",
]
authors = [
    {name = "Bartosz Steć", email = "420927@student.agh.edu.pl"},
    {name = "John Test", email = "example@email.com"},
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0,<8.1",
]
